kubernetes-manifests/ingress/ingress-http.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: daytrader-web
  annotations:
#    kubernetes.io/ingress.allow-http: "false"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-path: /
#    nginx.ingress.kubernetes.io/secure-backends: "true"    
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  #tls:
  #- hosts:
  #  #- a64e53e89e07d4041a4a970bde9b40e9-27456817.us-east-2.elb.amazonaws.com
  #  secretName: daytrader-tls-secret
  rules:
    #- host: a64e53e89e07d4041a4a970bde9b40e9-27456817.us-east-2.elb.amazonaws.com
    - http: 
        paths:
        - path: /
          backend:
            serviceName: daytrader-web
            servicePort: 443
        - path: /quotes
          backend:
            serviceName: daytrader-quotes
            servicePort: 443
        - path: /accounts
          backend:
            serviceName: daytrader-accounts
            servicePort: 443
        - path: /portfolios
          backend:
            serviceName: daytrader-portfolios
            servicePort: 443
