kubernetes-manifests/ingress/ingress-web-react-npm-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: daytrader-web
  annotations:
#    kubernetes.io/ingress.allow-http: "false"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-path: /
    nginx.ingress.kubernetes.io/secure-backends: "true"    
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    #- daytrader-app.xyz
    #secretName: daytrader-tls-secret
    - 20.54.183.162
  rules:
    #- host: daytrader-app.xyz
    - http: 
        paths:
        - path: /
          backend:
            serviceName: daytrader-gateway
            servicePort: 443
#        - path: /config
#          backend:
#            serviceName: daytrader-web
#            servicePort: 443
#        - path: /quotes
#          backend:
#            serviceName: daytrader-quotes
#            servicePort: 443
#        - path: /accounts
#          backend:
#            serviceName: daytrader-accounts
#            servicePort: 443
#        - path: /portfolios
#          backend:
#            serviceName: daytrader-portfolios
#            servicePort: 443
#
